<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="net.maui.morselab.viewmodel.PlayTextViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Use Material's TextInputLayout for better styling and accessibility -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/enter_text_to_convert_to_morse_code"
                android:scrollbars="vertical"
                android:text="@={viewmodel.textLiveData}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_morse_code"
            android:enabled="@{viewmodel.isReady}"
            android:onClick="@{() -> viewmodel.playMorseCallback()}"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/save_morse_code"
            android:enabled="@{viewmodel.isReady}"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="@+id/playButton"
            app:layout_constraintStart_toEndOf="@+id/playButton"
            app:layout_constraintTop_toTopOf="@+id/playButton" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_morse_code"
            android:enabled="@{viewmodel.isReady}"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saveButton"
            app:layout_constraintTop_toTopOf="@+id/saveButton" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>